Finished checker page for DT

--- a/home 2.html
+++ b/home 2.html
@@ -77,60 +77,108 @@
     </nav>
     <main>
         <div class="app">
+
             <h1 class="welcome-text page-heading">Checker</h1>
-            <div class="checker-box">
-                <div class="product-box">
-                    <button class="back-button">
-                        <svg class="svg-icon" viewBox="0 0 20 20">
-                            <path
-                                d="M11.739,13.962c-0.087,0.086-0.199,0.131-0.312,0.131c-0.112,0-0.226-0.045-0.312-0.131l-3.738-3.736c-0.173-0.173-0.173-0.454,0-0.626l3.559-3.562c0.173-0.175,0.454-0.173,0.626,0c0.173,0.172,0.173,0.451,0,0.624l-3.248,3.25l3.425,3.426C11.911,13.511,11.911,13.789,11.739,13.962 ">
-                            </path>
-                        </svg>
-                    </button>
-                    <div class="product-detail-block">
-                        <h3>Tree Graphic Tee</h3>
-                        <h4 class="product-price-large">$79.99 &emsp; ★★</h4>
-                        <img class="product-img-large" src="img/treetee.jpg">
-                        <p class="product-description">I'm baby hoodie cliche narwhal taxidermy, activated charcoal
-                            banjo viral knausgaard semiotics. IPhone jean shorts hexagon offal mumblecore try-hard
-                            sriracha migas knausgaard.</p>
-                    </div>
-                </div>
-                <div class="metric-box">
-                    <div class="metric-box-header">
-                        <img class="metric-icon" src="img/bad.png">
-                        <div class="metric-box-header-titleblock">
-                            <h3>Maybe think again...</h3>
-                            <p>Here's why:</p>
+            <div class="checker">
+                <div class="checker-box">
+                    <div class="product-box">
+                        <button class="back-button">
+                            <svg class="svg-icon" viewBox="0 0 20 20">
+                                <path
+                                    d="M11.739,13.962c-0.087,0.086-0.199,0.131-0.312,0.131c-0.112,0-0.226-0.045-0.312-0.131l-3.738-3.736c-0.173-0.173-0.173-0.454,0-0.626l3.559-3.562c0.173-0.175,0.454-0.173,0.626,0c0.173,0.172,0.173,0.451,0,0.624l-3.248,3.25l3.425,3.426C11.911,13.511,11.911,13.789,11.739,13.962 ">
+                                </path>
+                            </svg>
+                        </button>
+                        <div class="product-detail-block">
+                            <h3>Tree Graphic Tee</h3>
+                            <h4 class="product-price-large">$79.99 &emsp; ★★</h4>
+                            <img class="product-img-large" src="img/treetee.jpg">
+                            <p class="product-description">I'm baby hoodie cliche narwhal taxidermy, activated charcoal
+                                banjo viral knausgaard semiotics. IPhone jean shorts hexagon offal mumblecore try-hard
+                                sriracha migas knausgaard.</p>
                         </div>
                     </div>
-                    <h5>Supplier Ethics</h5>
-                    <div class="metric-bar-outside">
-                        <div class="metric-bar-inside-bad" style="width: 4vw;"></div>
+                    <div class="metric-box">
+                        <div class="metric-box-header">
+                            <img class="metric-icon" src="img/bad.png">
+                            <div class="metric-box-header-titleblock">
+                                <h3>Maybe think again...</h3>
+                                <p>Here's why:</p>
+                            </div>
+                        </div>
+                        <h5>Supplier Ethics</h5>
+                        <div class="metric-bar-outside">
+                            <div class="metric-bar-inside-bad" style="width: 4vw;"></div>
+                        </div>
+                        <h5>Material Waste</h5>
+                        <div class="metric-bar-outside">
+                            <div class="metric-bar-inside-med" style="width: 9vw;"></div>
+                        </div>
+                        <h5>Manufacturing Methods</h5>
+                        <div class="metric-bar-outside">
+                            <div class="metric-bar-inside-bad" style="width: 4vw;"></div>
+                        </div>
+                        <h5>Energy/water consumption</h5>
+                        <div class="metric-bar-outside">
+                            <div class="metric-bar-inside-bad" style="width: 3vw;"></div>
+                        </div>
+                        <h5>Animal Welfare</h5>
+                        <div class="metric-bar-outside">
+                            <div class="metric-bar-inside-good" style="width: 14vw;"></div>
+                        </div>
+                        <h5>Deforestation</h5>
+                        <div class="metric-bar-outside">
+                            <div class="metric-bar-inside-bad" style="width: 4vw;"></div>
+                        </div>
+                        <h5>Pollution</h5>
+                        <div class="metric-bar-outside">
+                            <div class="metric-bar-inside-bad" style="width: 3vw;"></div>
+                        </div>
                     </div>
-                    <h5>Material Waste</h5>
-                    <div class="metric-bar-outside">
-                        <div class="metric-bar-inside-med" style="width: 9vw;"></div>
-                    </div>
-                    <h5>Manufacturing Methods</h5>
-                    <div class="metric-bar-outside">
-                        <div class="metric-bar-inside-bad" style="width: 4vw;"></div>
-                    </div>
-                    <h5>Energy/water consumption</h5>
-                    <div class="metric-bar-outside">
-                        <div class="metric-bar-inside-bad" style="width: 3vw;"></div>
-                    </div>
-                    <h5>Animal Welfare</h5>
-                    <div class="metric-bar-outside">
-                        <div class="metric-bar-inside-good" style="width: 14vw;"></div>
-                    </div>
-                    <h5>Deforestation</h5>
-                    <div class="metric-bar-outside">
-                        <div class="metric-bar-inside-bad" style="width: 4vw;"></div>
-                    </div>
-                    <h5>Pollution</h5>
-                    <div class="metric-bar-outside">
-                        <div class="metric-bar-inside-bad" style="width: 3vw;"></div>
+                </div>
+                <div class="alternatives-box">
+                    <h3>Alternatives:</h3>
+                    <div class="alternatives-gallery">
+                        <div class="alternatives-card">
+                            <h5 class="product-title-small">Tree Graphic Tee</h5>
+                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
+                            <img class="product-img-small" src="img/treetee.jpg">
+                        </div>
+                        <div class="alternatives-card">
+                            <h5 class="product-title-small">Tree Graphic Tee</h5>
+                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
+                            <img class="product-img-small" src="img/treetee.jpg">
+                        </div>
+                        <div class="alternatives-card">
+                            <h5 class="product-title-small">Tree Graphic Tee</h5>
+                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
+                            <img class="product-img-small" src="img/treetee.jpg">
+                        </div>
+                        <div class="alternatives-card">
+                            <h5 class="product-title-small">Tree Graphic Tee</h5>
+                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
+                            <img class="product-img-small" src="img/treetee.jpg">
+                        </div>
+                        <div class="alternatives-card">
+                            <h5 class="product-title-small">Tree Graphic Tee</h5>
+                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
+                            <img class="product-img-small" src="img/treetee.jpg">
+                        </div>
+                        <div class="alternatives-card">
+                            <h5 class="product-title-small">Tree Graphic Tee</h5>
+                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
+                            <img class="product-img-small" src="img/treetee.jpg">
+                        </div>
+                        <div class="alternatives-card">
+                            <h5 class="product-title-small">Tree Graphic Tee</h5>
+                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
+                            <img class="product-img-small" src="img/treetee.jpg">
+                        </div>
+                        <div class="alternatives-card">
+                            <h5 class="product-title-small">Tree Graphic Tee</h5>
+                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
+                            <img class="product-img-small" src="img/treetee.jpg">
+                        </div>
                     </div>
                 </div>
             </div>
