Mobile checker done

--- a/checker.html
+++ b/checker.html
@@ -78,7 +78,7 @@
     <main>
         <div class="app">
 
-            <h1 class="welcome-text page-heading">Checker</h1>
+            <h1 class="welcome-text page-heading" style="margin-left: 5vw;">Checker</h1>
             <div class="checker">
                 <div class="checker-box">
                     <div class="product-box">
@@ -108,31 +108,31 @@
                         </div>
                         <h5>Supplier Ethics</h5>
                         <div class="metric-bar-outside">
-                            <div class="metric-bar-inside-bad" style="width: 4vw;"></div>
+                            <div class="metric-bar-inside-bad" style="width: 14%;"></div>
                         </div>
                         <h5>Material Waste</h5>
                         <div class="metric-bar-outside">
-                            <div class="metric-bar-inside-med" style="width: 9vw;"></div>
+                            <div class="metric-bar-inside-med" style="width: 39%;"></div>
                         </div>
                         <h5>Manufacturing Methods</h5>
                         <div class="metric-bar-outside">
-                            <div class="metric-bar-inside-bad" style="width: 4vw;"></div>
+                            <div class="metric-bar-inside-bad" style="width: 14%;"></div>
                         </div>
                         <h5>Energy/water consumption</h5>
                         <div class="metric-bar-outside">
-                            <div class="metric-bar-inside-bad" style="width: 3vw;"></div>
+                            <div class="metric-bar-inside-bad" style="width: 10%;"></div>
                         </div>
                         <h5>Animal Welfare</h5>
                         <div class="metric-bar-outside">
-                            <div class="metric-bar-inside-good" style="width: 14vw;"></div>
+                            <div class="metric-bar-inside-good" style="width: 80%;"></div>
                         </div>
                         <h5>Deforestation</h5>
                         <div class="metric-bar-outside">
-                            <div class="metric-bar-inside-bad" style="width: 4vw;"></div>
+                            <div class="metric-bar-inside-bad" style="width: 18%;"></div>
                         </div>
                         <h5>Pollution</h5>
                         <div class="metric-bar-outside">
-                            <div class="metric-bar-inside-bad" style="width: 3vw;"></div>
+                            <div class="metric-bar-inside-bad" style="width: 10%;"></div>
                         </div>
                     </div>
                 </div>
