Checker screen added

--- a/checker.html
+++ b/checker.html
@@ -75,115 +75,25 @@
             </li>
         </ul>
     </nav>
-    <main>
+    <main id="checker-screen">
         <div class="app">
-
             <h1 class="welcome-text page-heading" id="checker-title">Checker</h1>
-            <div class="checker">
-                <div class="checker-box">
-                    <div class="product-box">
-                        <button class="back-button">
-                            <svg class="svg-icon" viewBox="0 0 20 20">
-                                <path
-                                    d="M11.739,13.962c-0.087,0.086-0.199,0.131-0.312,0.131c-0.112,0-0.226-0.045-0.312-0.131l-3.738-3.736c-0.173-0.173-0.173-0.454,0-0.626l3.559-3.562c0.173-0.175,0.454-0.173,0.626,0c0.173,0.172,0.173,0.451,0,0.624l-3.248,3.25l3.425,3.426C11.911,13.511,11.911,13.789,11.739,13.962 ">
-                                </path>
-                            </svg>
-                        </button>
-                        <div class="product-detail-block">
-                            <h3>Tree Graphic Tee</h3>
-                            <h4 class="product-price-large">$79.99 &emsp; ★★</h4>
-                            <img class="product-img-large" src="img/treetee.jpg">
-                            <p class="product-description">I'm baby hoodie cliche narwhal taxidermy, activated charcoal
-                                banjo viral knausgaard semiotics. IPhone jean shorts hexagon offal mumblecore try-hard
-                                sriracha migas knausgaard.</p>
-                        </div>
-                    </div>
-                    <div class="metric-box">
-                        <div class="metric-box-header">
-                            <img class="metric-icon" src="img/bad.png">
-                            <div class="metric-box-header-titleblock">
-                                <h3>Maybe think again...</h3>
-                                <p>Here's why:</p>
-                            </div>
-                        </div>
-                        <h5>Supplier Ethics</h5>
-                        <div class="metric-bar-outside">
-                            <div class="metric-bar-inside-bad" style="width: 14%;"></div>
-                        </div>
-                        <h5>Material Waste</h5>
-                        <div class="metric-bar-outside">
-                            <div class="metric-bar-inside-med" style="width: 39%;"></div>
-                        </div>
-                        <h5>Manufacturing Methods</h5>
-                        <div class="metric-bar-outside">
-                            <div class="metric-bar-inside-bad" style="width: 14%;"></div>
-                        </div>
-                        <h5>Energy/water consumption</h5>
-                        <div class="metric-bar-outside">
-                            <div class="metric-bar-inside-bad" style="width: 10%;"></div>
-                        </div>
-                        <h5>Animal Welfare</h5>
-                        <div class="metric-bar-outside">
-                            <div class="metric-bar-inside-good" style="width: 80%;"></div>
-                        </div>
-                        <h5>Deforestation</h5>
-                        <div class="metric-bar-outside">
-                            <div class="metric-bar-inside-bad" style="width: 18%;"></div>
-                        </div>
-                        <h5>Pollution</h5>
-                        <div class="metric-bar-outside">
-                            <div class="metric-bar-inside-bad" style="width: 10%;"></div>
-                        </div>
-                    </div>
+            <div class="checker row">
+                <div class="input-field">
+                    <svg class="svg-icon search-icon" viewBox="0 0 20 20">
+                        <path
+                            d="M18.125,15.804l-4.038-4.037c0.675-1.079,1.012-2.308,1.01-3.534C15.089,4.62,12.199,1.75,8.584,1.75C4.815,1.75,1.982,4.726,2,8.286c0.021,3.577,2.908,6.549,6.578,6.549c1.241,0,2.417-0.347,3.44-0.985l4.032,4.026c0.167,0.166,0.43,0.166,0.596,0l1.479-1.478C18.292,16.234,18.292,15.968,18.125,15.804 M8.578,13.99c-3.198,0-5.716-2.593-5.733-5.71c-0.017-3.084,2.438-5.686,5.74-5.686c3.197,0,5.625,2.493,5.64,5.624C14.242,11.548,11.621,13.99,8.578,13.99 M16.349,16.981l-3.637-3.635c0.131-0.11,0.721-0.695,0.876-0.884l3.642,3.639L16.349,16.981z">
+                        </path>
+                    </svg>
+                    <input type="text" class="login-field" value="" placeholder="Search" id="login-name">
+                    <label class="" for="login-name"></label>
                 </div>
-                <div class="alternatives-box">
-                    <h3>Alternatives:</h3>
-                    <div class="alternatives-gallery">
-                        <div class="alternatives-card">
-                            <h5 class="product-title-small">Tree Graphic Tee</h5>
-                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
-                            <img class="product-img-small" src="img/treetee.jpg">
-                        </div>
-                        <div class="alternatives-card">
-                            <h5 class="product-title-small">Tree Graphic Tee</h5>
-                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
-                            <img class="product-img-small" src="img/treetee.jpg">
-                        </div>
-                        <div class="alternatives-card">
-                            <h5 class="product-title-small">Tree Graphic Tee</h5>
-                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
-                            <img class="product-img-small" src="img/treetee.jpg">
-                        </div>
-                        <div class="alternatives-card">
-                            <h5 class="product-title-small">Tree Graphic Tee</h5>
-                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
-                            <img class="product-img-small" src="img/treetee.jpg">
-                        </div>
-                        <div class="alternatives-card">
-                            <h5 class="product-title-small">Tree Graphic Tee</h5>
-                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
-                            <img class="product-img-small" src="img/treetee.jpg">
-                        </div>
-                        <div class="alternatives-card">
-                            <h5 class="product-title-small">Tree Graphic Tee</h5>
-                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
-                            <img class="product-img-small" src="img/treetee.jpg">
-                        </div>
-                        <div class="alternatives-card">
-                            <h5 class="product-title-small">Tree Graphic Tee</h5>
-                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
-                            <img class="product-img-small" src="img/treetee.jpg">
-                        </div>
-                        <div class="alternatives-card">
-                            <h5 class="product-title-small">Tree Graphic Tee</h5>
-                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
-                            <img class="product-img-small" src="img/treetee.jpg">
-                        </div>
-                    </div>
-                </div>
+                <a href="checkproduct.html">
+                    <button class="go-button">
+                        <h2>Go</h2>
+                    </button>
+                </a>
             </div>
-
-
         </div>
     </main>
 </body>
