--- a/home.html
+++ b/home.html
@@ -77,16 +77,28 @@
     </nav>
     <main>
         <div class="app">
-            <h3 class="welcome-text hello" >Hi Ruth,</h3>
+            <h3 class="welcome-text hello">Hi Ruth,</h3>
             <h1 class="welcome-text hello">Welcome back!</h1>
             <div class="planet-box">
                 <div class="viz-box">
                     <h3>Your Planet:</h3>
+                    <div class="mobile-health">
+                        <h5 style="padding-top: 1rem;">Health: 89%</h5>
+                        <div class="health-bar-outside">
+                            <div class="metric-bar-inside-good" style="width: 89%;"></div>
+                        </div>
+                    </div>
                     <img class="viz" src="img/planet.png"></img>
+
                 </div>
                 <div class="stat-box">
                     <h2>Statistics:</h2>
-                    <p class="desc">What's new with your planet.</p>
+
+                    <h5 style="padding-top: 1rem;">Health: 89%</h5>
+                    <div class="health-bar-outside" style="width: 10vw;">
+                        <div class="metric-bar-inside-good" style="width: 89%;"></div>
+                    </div>
+                    <p class="desc">What's new with your planet:</p>
                     <div class="spacer" style="height: 1.5vh;"></div>
                     <h4>Today:</h4>
                     <p class="stat">+ 78pts</p>
@@ -104,7 +116,7 @@
                 <h3>Your Progress:</h3>
                 <img class="graph-header" src="img/graph-header.png">
                 <div class="scrollable-container"><img class="graph-scroll" src="img/graph-long.png"></div>
-                
+
             </div>
             <div class="transaction-container">
                 <div>
@@ -115,7 +127,8 @@
                             <li class="transaction-item">
                                 <a href="#" class="transaction">
                                     <img src="img/lamp.png" alt="" class="transaction-icon">
-                                    <span class="transaction-text">Ikea - Tempe<br><span class="transaction-text-numbers">-
+                                    <span class="transaction-text">Ikea - Tempe<br><span
+                                            class="transaction-text-numbers">-
                                             $12.50</span></span>
                                     <span class="transaction-score-text-happy">+15pts</span>
                                     <img src="img/hap.png" alt="" class="transaction-score-icon">
@@ -124,7 +137,8 @@
                             <li class="transaction-item">
                                 <a href="#" class="transaction">
                                     <img src="img/juice.png" alt="" class="transaction-icon">
-                                    <span class="transaction-text">Boost Juice<br><span class="transaction-text-numbers">-
+                                    <span class="transaction-text">Boost Juice<br><span
+                                            class="transaction-text-numbers">-
                                             $12.50</span></span>
                                     <span class="transaction-score-text-sad">-3pts</span>
                                     <img src="img/sad.png" alt="" class="transaction-score-icon">
@@ -142,7 +156,8 @@
                             <li class="transaction-item">
                                 <a href="#" class="transaction">
                                     <img src="img/plant.png" alt="" class="transaction-icon">
-                                    <span class="transaction-text">Green Plants<br><span class="transaction-text-numbers">-
+                                    <span class="transaction-text">Green Plants<br><span
+                                            class="transaction-text-numbers">-
                                             $43.50</span></span>
                                     <span class="transaction-score-text-medium">+3pts</span>
                                     <img src="img/mid.png" alt="" class="transaction-score-icon">
@@ -152,7 +167,8 @@
                             <li class="transaction-item">
                                 <a href="#" class="transaction">
                                     <img src="img/lamp.png" alt="" class="transaction-icon">
-                                    <span class="transaction-text">Ikea - Tempe<br><span class="transaction-text-numbers">-
+                                    <span class="transaction-text">Ikea - Tempe<br><span
+                                            class="transaction-text-numbers">-
                                             $12.50</span></span>
                                     <span class="transaction-score-text-happy">+15pts</span>
                                     <img src="img/hap.png" alt="" class="transaction-score-icon">
@@ -161,7 +177,8 @@
                             <li class="transaction-item">
                                 <a href="#" class="transaction">
                                     <img src="img/juice.png" alt="" class="transaction-icon">
-                                    <span class="transaction-text">Boost Juice<br><span class="transaction-text-numbers">-
+                                    <span class="transaction-text">Boost Juice<br><span
+                                            class="transaction-text-numbers">-
                                             $12.50</span></span>
                                     <span class="transaction-score-text-sad">-3pts</span>
                                     <img src="img/sad.png" alt="" class="transaction-score-icon">
@@ -179,7 +196,8 @@
                             <li class="transaction-item">
                                 <a href="#" class="transaction">
                                     <img src="img/plant.png" alt="" class="transaction-icon">
-                                    <span class="transaction-text">Green Plants<br><span class="transaction-text-numbers">-
+                                    <span class="transaction-text">Green Plants<br><span
+                                            class="transaction-text-numbers">-
                                             $43.50</span></span>
                                     <span class="transaction-score-text-medium">+3pts</span>
                                     <img src="img/mid.png" alt="" class="transaction-score-icon">
@@ -188,7 +206,8 @@
                             <li class="transaction-item">
                                 <a href="#" class="transaction">
                                     <img src="img/lamp.png" alt="" class="transaction-icon">
-                                    <span class="transaction-text">Ikea - Tempe<br><span class="transaction-text-numbers">-
+                                    <span class="transaction-text">Ikea - Tempe<br><span
+                                            class="transaction-text-numbers">-
                                             $12.50</span></span>
                                     <span class="transaction-score-text-happy">+15pts</span>
                                     <img src="img/hap.png" alt="" class="transaction-score-icon">
@@ -197,7 +216,8 @@
                             <li class="transaction-item">
                                 <a href="#" class="transaction">
                                     <img src="img/juice.png" alt="" class="transaction-icon">
-                                    <span class="transaction-text">Boost Juice<br><span class="transaction-text-numbers">-
+                                    <span class="transaction-text">Boost Juice<br><span
+                                            class="transaction-text-numbers">-
                                             $12.50</span></span>
                                     <span class="transaction-score-text-sad">-3pts</span>
                                     <img src="img/sad.png" alt="" class="transaction-score-icon">
@@ -215,7 +235,8 @@
                             <li class="transaction-item">
                                 <a href="#" class="transaction">
                                     <img src="img/plant.png" alt="" class="transaction-icon">
-                                    <span class="transaction-text">Green Plants<br><span class="transaction-text-numbers">-
+                                    <span class="transaction-text">Green Plants<br><span
+                                            class="transaction-text-numbers">-
                                             $43.50</span></span>
                                     <span class="transaction-score-text-medium">+3pts</span>
                                     <img src="img/mid.png" alt="" class="transaction-score-icon">
