Populated with content

--- a/checkproduct.html
+++ b/checkproduct.html
@@ -95,9 +95,7 @@
                             <h3>Tree Graphic Tee</h3>
                             <h4 class="product-price-large">$79.99 &emsp; ★★</h4>
                             <img class="product-img-large" src="img/treetee.jpg">
-                            <p class="product-description">I'm baby hoodie cliche narwhal taxidermy, activated charcoal
-                                banjo viral knausgaard semiotics. IPhone jean shorts hexagon offal mumblecore try-hard
-                                sriracha migas knausgaard.</p>
+                            <p class="product-description">This soft tee is your new best friend. Made from 100% cotton, with a special fade resistant dye, you'll be wanting to wear it again and again.</p>
                         </div>
                     </div>
                     <div class="metric-box">
@@ -142,44 +140,44 @@
                     <h3>Alternatives:</h3>
                     <div class="alternatives-gallery">
                         <div class="alternatives-card">
-                            <h5 class="product-title-small">Tree Graphic Tee</h5>
-                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
-                            <img class="product-img-small" src="img/treetee.jpg">
+                            <h5 class="product-title-small">Cotton Tee</h5>
+                            <h5 class="product-price-small">$69.99 &emsp; ★★★★★</h5>
+                            <img class="product-img-small" src="img/alt1.png">
                         </div>
                         <div class="alternatives-card">
-                            <h5 class="product-title-small">Tree Graphic Tee</h5>
-                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
-                            <img class="product-img-small" src="img/treetee.jpg">
+                            <h5 class="product-title-small">Peace Tee</h5>
+                            <h5 class="product-price-small">$55.99 &emsp; ★★★★</h5>
+                            <img class="product-img-small" src="img/alt2.png">
                         </div>
                         <div class="alternatives-card">
-                            <h5 class="product-title-small">Tree Graphic Tee</h5>
-                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
-                            <img class="product-img-small" src="img/treetee.jpg">
+                            <h5 class="product-title-small">Nickleback Tee</h5>
+                            <h5 class="product-price-small">$30.00 &emsp; ★★★★</h5>
+                            <img class="product-img-small" src="img/alt3.png">
                         </div>
                         <div class="alternatives-card">
-                            <h5 class="product-title-small">Tree Graphic Tee</h5>
-                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
-                            <img class="product-img-small" src="img/treetee.jpg">
+                            <h5 class="product-title-small">Tatoo Crewneck</h5>
+                            <h5 class="product-price-small">$15.50 &emsp; ★★★★</h5>
+                            <img class="product-img-small" src="img/alt4.png">
                         </div>
                         <div class="alternatives-card">
-                            <h5 class="product-title-small">Tree Graphic Tee</h5>
-                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
-                            <img class="product-img-small" src="img/treetee.jpg">
+                            <h5 class="product-title-small">Linen Tee</h5>
+                            <h5 class="product-price-small">$74.99 &emsp; ★★★★</h5>
+                            <img class="product-img-small" src="img/alt5.png">
                         </div>
                         <div class="alternatives-card">
-                            <h5 class="product-title-small">Tree Graphic Tee</h5>
-                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
-                            <img class="product-img-small" src="img/treetee.jpg">
+                            <h5 class="product-title-small">Dragon Tee</h5>
+                            <h5 class="product-price-small">$29.99 &emsp; ★★★★</h5>
+                            <img class="product-img-small" src="img/alt6.png">
                         </div>
                         <div class="alternatives-card">
-                            <h5 class="product-title-small">Tree Graphic Tee</h5>
-                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
-                            <img class="product-img-small" src="img/treetee.jpg">
+                            <h5 class="product-title-small">Crown of Thorns</h5>
+                            <h5 class="product-price-small">$89.99 &emsp; ★★★★</h5>
+                            <img class="product-img-small" src="img/alt7.png">
                         </div>
                         <div class="alternatives-card">
-                            <h5 class="product-title-small">Tree Graphic Tee</h5>
-                            <h5 class="product-price-small">$79.99 &emsp; ★★</h5>
-                            <img class="product-img-small" src="img/treetee.jpg">
+                            <h5 class="product-title-small">Soft Crewneck</h5>
+                            <h5 class="product-price-small">$79.99 &emsp; ★★★</h5>
+                            <img class="product-img-small" src="img/alt8.png">
                         </div>
                     </div>
                 </div>
