--- a/profile.html
+++ b/profile.html
@@ -89,13 +89,11 @@
                         <div class="profile-goals">
                             <div class="goal-card impact" style="margin-right: 1rem;">
                                 <img class="goal-icon" src="img/toucan.png">
-                                <p style="font-size: smaller;">Earn 50 more points to unlock a new and exclusive animal!
-                                </p>
+                                <p style="font-size: smaller;">You're an animal welfare champion! Go you! </p>
                             </div>
                             <div class="goal-card impact">
                                 <img class="goal-icon" src="img/bag.png">
-                                <p style="font-size: smaller;">Lessen your support of fast-fashion to earn the fashion
-                                    badge.</p>
+                                <p style="font-size: smaller;">You are a sustainable grocery shopper.</p>
                             </div>
                         </div>
                     </div>
@@ -126,22 +124,19 @@
                         <h1>+</h1>
                     </div>
                     <div class="goal-card">
-                        <img class="goal-icon" src="img/bag.png">
-                        <p style="font-size: smaller;">Lessen your support of fast-fashion stores to earn a new
-                            badge.</p>
+                        <img class="goal-icon" src="img/planet.png">
+                        <p style="font-size: smaller;">Spend less than $100 on fast fashion this week</p>
                     </div>
                     <div class="goal-card">
-                        <img class="goal-icon" src="img/bag.png">
-                        <p style="font-size: smaller;">Lessen your support of fast-fashion stores to earn a new
-                            badge.</p>
+                        <img class="goal-icon" src="img/planet.png">
+                        <p style="font-size: smaller;">Swap out your morning commute for public transport this week.</p>
                     </div>
                     <div class="goal-card">
-                        <img class="goal-icon" src="img/bag.png">
-                        <p style="font-size: smaller;">Lessen your support of fast-fashion stores to earn a new
-                            badge.</p>
+                        <img class="goal-icon" src="img/planet.png">
+                        <p style="font-size: smaller;">Bring a keep cup with you 5 days out of 7 this week.</p>
                     </div>
                     <div class="goal-card">
-                        <img class="goal-icon" src="img/bag.png">
+                        <img class="goal-icon" src="img/planet.png">
                         <p style="font-size: smaller;">Lessen your support of fast-fashion stores to earn a new
                             badge.</p>
                     </div>
